<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:gravity="center"
        android:weightSum="3"
        android:background="@color/white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/btn_new_property"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/ic_btn_red"
            android:gravity="center"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/add_property"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_add_apartment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/ic_btn_blue"
            android:gravity="center"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/add_apartment"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_showDrafts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/ic_btn_yellow"
            android:gravity="center"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/show_drafts"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:visibility="gone"
            android:id="@+id/btn_old_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/old_property"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:visibility="gone"
            android:id="@+id/btn_bill_distribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/bill_distribution"
            android:textSize="@dimen/button_text_size" />


    </LinearLayout>
</LinearLayout>