<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textIAgeOfBuilding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <EditText
                        android:id="@+id/edt_covered_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/age_of_building"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textIElectricConnectionNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <EditText
                        android:id="@+id/edt_election_connection_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/election_connection_no"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textIShopApartmentNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <EditText
                        android:id="@+id/edt_shop_apartment_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/shop_apartment_no"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textIBusinessIndustryType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <EditText
                        android:id="@+id/edt_business_industry_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/business_industry_type"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spn_licence_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:focusableInTouchMode="false"
                    android:hint="@string/licence_status"
                    app:met_floatingLabel="normal" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textILicenceNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <EditText
                        android:id="@+id/edt_licence_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/licence_no"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textIApartmentShopArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <EditText
                        android:id="@+id/edt_apartment_shop_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apartment_shop_area"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textILicenceValidity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <EditText
                        android:id="@+id/edt_licence_validity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/licence_validity"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edt_noOwner"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:focusable="false"
                            android:hint="@string/no_of_owner"
                            android:inputType="number" />


                        <Button
                            android:id="@+id/btn_add_owner"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/addOwner" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/owner_values"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textISignature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <EditText
                        android:id="@+id/edt_signature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/signature"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>